--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
     <p>Zackery A. Key</p>
     <br>
     <p>Email address</p>
-    <a href="mailto:zkey7558@student.uacch.edu">zkey7558@student.uacch.edu</a>
+    <a href="mailto:zkey41794@gmail.com">zkey41794@gmail.com</a>
 </div>
 </div> 
 </div>
